[ASM-2360] feat: re-add missing properties